fix: disarm the binding's finalizer before freeing a handle type
Releasable.handle had a double free, and it was mine, not the callers'.

All 185 org.opencv types without a public release() carry
`protected void finalize() { delete(this.nativeObj); }` -- unconditional,
verified with javap -c. So freeing one through Releasable.handle and then
dropping the Java object runs delete twice on the same address: once from
us, once from the finalizer thread whenever the collector next runs.
Managed's compare-and-set is no defence; it makes our release idempotent
and knows nothing about another thread's finalizer.

It does not fail where it happens. It corrupts the heap and kills the JVM
somewhere else entirely, which is how it surfaced -- as `double free or
corruption` in a worker running an unrelated suite. Latent in every
detector: Cascades, Detectors, Dnn, FaceDetect.

The fix zeroes nativeObj before deleting, so the finalizer's delete(0) is
a no-op on nullptr. If the field cannot be written -- a future JDK
tightening final-field reflection, or OpenCV on the module path -- it
throws and names --add-opens rather than deleting anyway. A leak is
recoverable; a corrupted heap is not.

DoubleFreeTest churns 300 allocations of four handle types with forced
GC. Confirmed falsifiable rather than assumed: with the disarm commented
out the JVM SIGSEGVs and the worker dies without reporting. It also
asserts the mechanism directly -- nativeObj reads 0 after release -- so a
regression shows up as a failed assertion and not only as a dead worker.

Also lands B9 (non-memoizing frame iterator -- LazyList memoizes and
cannot coexist with per-frame release), B11 (YuNet with its 15-column
decode and download-with-checksum provisioning), B13 (ONNX) and B17.

B17 turns Track B's unfalsifiable "API surface reviewed by you" gate into
a golden signature dump that can fail. Its regeneration path had a hole:
regenerating produced a green build, so an exported SCALACV_API_REGENERATE
would have disa